feat: optimize Docker deployment with health checks and security improvements
Docker Optimization:
- Switch from Alpine to Debian-slim base image for onnxruntime-node compatibility
- Reduce image size from 1.03GB to 1.01GB (2% reduction)
- Install production dependencies fresh with npm cache cleanup
- Update .dockerignore to exclude .cursor/, .agent/, .swarm/, .claude-flow/

Health Monitoring:
- Add Node.js-based health check using better-sqlite3
- Verify database file exists, is accessible, and initialized
- Health check runs every 30s with 10s timeout
- No external dependencies (removed sqlite CLI requirement)

Security:
- Fix npm vulnerabilities by forcing esbuild ^0.25.0
- Zero vulnerabilities (verified with npm audit)

Docker Compose:
- Add structured logging with rotation (10MB max, 3 files)
- Add version and environment labels for organization
- Maintain persistent data volume configuration

All tests passing (1,094 tests)

--- a/.dockerignore
+++ b/.dockerignore
@@ -27,6 +27,7 @@ docs/
 # IDE
 .vscode/
 .idea/
+.cursor/
 *.swp
 *.swo
 *~
@@ -48,3 +49,8 @@ Thumbs.db
 data/*.db
 data/*.db-wal
 data/*.db-shm
+
+# Agent-specific
+.agent/
+.swarm/
+.claude-flow/
